force-app/main/default/objects/Harvest_Batch_Code__c/Harvest_Batch_Code__c.object-meta.xml
<CustomObject>
    <description>Unique Harvest Batch ID, Lot Code, Production Batch</description>
    <label>Batch ID</label>
    <nameField>
        <label>Batch ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>