force-app/main/default/objects/Harvest_Batch_Code__c/fields/Batch_ID_Hold__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Global Hold for Batch ID and pushes to all related Inventory Positions</inlineHelpText>
    <label>Batch ID Hold</label>
    <type>Checkbox</type>
</CustomField>