force-app/main/default/objects/Harvest_Batch_Code__c/fields/CBD__c.field-meta.xml
<CustomField>
    <fullName>CBD__c</fullName>
    <label>CBD (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>