force-app/main/default/objects/Harvest_Batch_Code__c/fields/CBD_MG_G__c.field-meta.xml
<CustomField>
    <fullName>CBD_MG_G__c</fullName>
    <label>CBD (MG/G)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>