force-app/main/default/objects/Harvest_Batch_Code__c/fields/COA_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>COA_Issued_Date__c</fullName>
    <label>COA Issued Date</label>
    <type>Date</type>
</CustomField>