force-app/main/default/objects/Harvest_Batch_Code__c/fields/COA_Number__c.field-meta.xml
<CustomField>
    <fullName>COA_Number__c</fullName>
    <label>COA Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>