force-app/main/default/objects/Harvest_Batch_Code__c/fields/Producer_Name__c.field-meta.xml
<CustomField>
    <fullName>Producer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Batch IDs</relationshipLabel>
    <relationshipName>Batch_IDs</relationshipName>
    <type>Lookup</type>
</CustomField>