force-app/main/default/objects/Harvest_Batch_Code__c/fields/THC__c.field-meta.xml
<CustomField>
    <fullName>THC__c</fullName>
    <label>THC (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>