force-app/main/default/objects/Harvest_Batch_Code__c/fields/Unique_Batch_ID_Helper__c.field-meta.xml
<CustomField>
    <fullName>Unique_Batch_ID_Helper__c</fullName>
    <formula>Name &amp; Producer_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Batch ID Helper</label>
    <type>Text</type>
</CustomField>