force-app/main/default/objects/Harvest_Batch_Code__c/listViews/X2_Batch_ID_with_COA.listView-meta.xml
<ListView>
    <fullName>X2_Batch_ID_with_COA</fullName>
    <columns>NAME</columns>
    <columns>COA_Number__c</columns>
    <columns>Lab_Test_Status__c</columns>
    <columns>Producer_Name__c</columns>
    <columns>COA_Issued_Date__c</columns>
    <columns>COA_Expiration_Date__c</columns>
    <columns>THC__c</columns>
    <columns>THC_MG_G__c</columns>
    <columns>CBD__c</columns>
    <columns>CBD_MG_G__c</columns>
    <columns>Terpene__c</columns>
    <columns>Terpene_MG_G__c</columns>
    <columns>Batch_ID_Hold__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>COA_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>2. Batch ID with COA</label>
</ListView>